--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,4 +8,5 @@
     <button ion-button (click)="pushAction()">Push</button>
     <button ion-button (click)="popoverAction1()">Popover1</button>
     <button ion-button (click)="popoverAction2()">Popover2</button>
+    <button ion-button (click)="popoverAction3()">Popover3</button>
 </ion-content>
