綁定 header footer height

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -26,7 +26,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding fullScreen no-bounce>
+<ion-content padding>
   <ion-list>
 
     <ng-template ngFor let-data [ngForOf]="dataArray">
